# mailer

./: .dockerignore  .gitignore  LICENSE.txt  README.md  db.sqlite3  dockerfile  env.list  pyproject.toml  requirements.txt  start.sh
api/: __init__.py  urls.py  views.py
configs/gunicorn/: dev.py  prod.py
constants/: email_validations.py  variables.py
email_client/: email_client.py  send.py
email_client/custom/: index.html  style.css
mailer/: asgi.py  settings.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
redis_server/: redis.py
sender/: sender.py
tests/: test_mailer.py
