[tool.poetry]
name = "mailer"
version = "0.1.0"
description = ""
authors = ["alquama00s <alquama00s@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
redis = "^4.5.1"
djangorestframework = "^3.14.0"
validate-email-address = "^1"
py3dns = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
